--- a/css/estilo.css
+++ b/css/estilo.css
@@ -99,7 +99,7 @@ header label {
 	padding: 20px 0;
 	color: #fff;
 	box-shadow: 2px 2px 5px 1px rgba(14,17,41,0.8);
-	width: 90%;
+	width: 95%;
 	margin: 20px auto;
 }
 #acerca_mi h1{
@@ -145,11 +145,11 @@ header label {
 
 .mi-imagen img:hover{
 	cursor: pointer;
-	animation: anim-min 0.8s;
+	animation: anim-min 0.4s;
 	-webkit-animation: anim-min 0.8s;
 	-o-animation: anim-min 0.8s;
 	
-	transition: 0.8s;
+	transition: 0.4s;
 	filter: grayscale(70%);
 	-webkit-filter: grayscale(70%);
 	-o-filter: grayscale(70%);
@@ -287,10 +287,12 @@ hr{
 #conocimientos{
 	background: rgba(31,31,31,0.9);
 	color:  rgba(225,225,225,1.00);
-	width: 90%;
+	width: 95%;
+	height: 50%;
 	margin: 20px auto;
 	padding: 20px 0 20px 0;
 	box-shadow: 2px 2px 5px 1px rgba(14,17,41,0.8);
+	position: relative;
 }
 #conocimientos h1{
 	background: rgba(255,255,255,0.1);
@@ -300,12 +302,13 @@ hr{
 	box-shadow: 2px 2px 5px 1px rgba(14,17,41,0.8);
 }
 .libreria{
-	height: 400px;
+	height: 500px;
 	width: 90%;
 	margin: auto;
 	background: #eee;
 	display: flex;
 	flex-wrap: wrap;
+	position: relative;
 }
 .libreria_item{
 	flex-grow: 1;
@@ -322,48 +325,101 @@ hr{
 	
 	position: relative;
 }
+.libreria_titulo{
+	display: flex;
+}
+.libreria_titulo img{
+	width: 30px;
+	height: 30px;
+	border-radius: 50%;
+}
+.titulo_item{
+	margin: auto 8px;
+}
 .libreria_item:nth-child(1){
-	background: rgba(14,17,41,0.8);
+	background: rgba(76,141,211,0.9);
 }
 .libreria_item:nth-child(2){
-	background: rgba(251,66,25,0.9);
+	background: rgba(251,66,25,0.7);
 }
 .libreria_item:hover{
-	flex-grow: 10;
+	flex-grow: 7;
 }
-.diseno_cont, .marketing_cont{
+.contenido_item{
 	display: none;
+	width: 100%;
 }
-.libreria_item:hover .titulo_item{
-	transform: translateY(-300%);
-	transition: transform 0.2s 0.2s;
+.libreria_item:hover .libreria_titulo{
+	transform: translateY(-600%) translateX(15%);
+	transition: transform 0.2s;
 }
-.libreria_item:hover .diseno_cont{
-	display: block;
-	color: #fff;
-	transition: 0.4s 0.4s;
-}
-.libreria_item:hover .marketing_cont{
-	display: block;
-	color: #fff;
-	transition: 0.4s 0.4s;
-}
-.libreria_item:hover img{
-	width: 100px;
-	border-radius: 50%;
-	border: 2px solid #fff;
+.libreria_item:hover .contenido_item{
+	display: table;
+	padding-top: 15%;
 	position: absolute;
-	left: 25%;
-	top: 50%;
-	transform: translateX(-30%) translateY(-50%);
+	color: #fff;
+	transition: all 0.4s 0.4s;
 }
-.libreria_item img:hover{
+.cont_ot{
+	font-size: 11px;
+	color: #eee;
+	display: flex;
+	justify-content: center;
+	padding-bottom: 10px;
+}
+.cont_ot img{
+	width: 70px;
+	height: 70px;
+	margin: auto 5px;
+}
+.cont_ot img:hover{
 	padding: 5px;
-	transition: 0.2s;
+}
+.cont_ot p{
+	width: 70%;
+	height: 100%;
+}
+
+@media (max-width:850px){
+	#conocimientos{
+		width: 100%;
+	}
+	.libreria{
+		height: 900px;
+	}
+	.libreria_item{
+		width: 100%;
+	}
+	.libreria_titulo{
+		width: 100%;
+		justify-content: center;
+	}
+	.libreria_item:hover .titulo_item{
+		font-size: 18px;
+		transform: translateY(-350%) translateX(-25%);
+		transition: transform 0.2s;
+	}
+	.libreria_item:hover .img-titulo{
+		display: none;
+	}
+	.libreria_item:hover .contenido_item{
+		display: inline;
+		padding-top: 10%;
+		position: absolute;
+	}
+	.cont_ot img{
+		width: 12%;
+		height: 12%;
+	}
+	.cont_ot p{
+		width: 90%;
+		height: 100%;
+		font-size: 9px;
+	}
 }
 
 
-/* scroll */
+/* -------- scroll ---------- */
 .seleccionado{
 	background: rgba(255,255,255,0.5);
 }
@@ -372,7 +428,7 @@ hr{
 #portafolio{
 	width:50%;
 	height: 500px;
-	background: blue;
+	background: red;
 }
 
 /* --- contactame --- */
