--- a/css/estilo.css
+++ b/css/estilo.css
@@ -541,6 +541,7 @@ button{
 }
 #btn-enviar{
 	width: 100%;
+	height: 30px;
 	margin-top: 10px;
 	background: #fff;
 	cursor: pointer;
@@ -556,6 +557,7 @@ button{
 }
 .redes-sociales{
 	width: 450px;
+	height: 100%;
 	background: rgba(255,255,255,0.1);
 	margin: 25px;
 	text-align: center;
@@ -563,6 +565,7 @@ button{
 	border-top: 1px solid #fff;
 	border-radius: 5px;
 	box-shadow: 2px 2px 5px 1px rgba(14,17,41,0.5);
+	flex-wrap: wrap;
 }
 .descripcion_rs{
 	padding: 15px 5px;
@@ -590,11 +593,22 @@ button{
 	border-radius: 50%;
 	border: 2px solid #fff;
 }
+
+@media (max-width:850px){
+	.derechos{
+		width: 100%;
+	}
+	#nombre, #email, #comentario{
+		width: 100%;
+		height: 30px;
+	}
+}
 /* --- footer --- */
 footer{
 	background: rgba(14,17,41,1);
 	color: #fff;
 	width: 100%;
 	height: 100px;
-	justify-content: space-between;
+	text-align: center;
+	padding-top: 40px;
 }
