--- a/css/slider.css
+++ b/css/slider.css
@@ -1,19 +1,75 @@
-#contenido #inicio{
+#inicio{
 	width: 100%;
 	padding-top: 50px;
+	
 }
 
-#contenido #slider{
+#slider{
 	height: 450px;
 	width: 100%;
 	overflow: hidden;
-	background:  url("../imagenes/banner1.jpg");
+	background:  url("../imagenes/fondo-portafolio.jpg");
 	background-repeat: no-repeat;
-	/*background-size: cover;*/
+	background-size: cover;
 	animation: imag 10s infinite alternate;
 	box-shadow: 2px 2px 5px 1px rgba(14,17,41,0.8);
+	position: relative;
 }
-
+.circ_ad1, .circ_ad2, .circ_ad3, .circ_ad4, .circ_ad5, .circ_ad6{
+	background: rgba(255,255,255,0.8);
+	position: absolute;
+	border-radius: 50%;
+	box-shadow: 0px 0px 12px 0px #fff;
+	border: 2px double #fff;
+	text-align: center;
+	padding-top: 30px;
+	color: rgba(21,32,94,0.84);
+}
+.circ_ad1{
+	width: 80px;
+	height: 80px;
+	top: 5%;
+	left: 20%;
+}
+.circ_ad2{
+	width: 100px;
+	height: 100px;
+	top: 50%;
+	left: 80%;
+	font-size: 25px;
+}
+.circ_ad3{
+	width: 50px;
+	height: 50px;
+	top: 65%;
+	left: 12%;
+	font-size: 20px;
+	padding-top: 10px;
+}
+.circ_ad4{
+	width: 100px;
+	height: 100px;
+	top: 48%;
+	left: 30%;
+	font-size: 20px;
+	padding-top: 35px;
+}
+.circ_ad5{
+	width: 70px;
+	height: 70px;
+	top: 30%;
+	left: 52%;
+	font-size: 25px;
+	padding-top: 20px;
+}
+.circ_ad6{
+	width: 50px;
+	height: 50px;
+	top: 10%;
+	left: 80%;
+	font-size: 15px;
+	padding-top: 15px;
+}
 @keyframes imag{
 	from{
 		background-size: 1380px;
