--- a/css/estilo.css
+++ b/css/estilo.css
@@ -70,17 +70,20 @@ header label {
 	header label{
 		display: block;
 		padding-right: 5px;
+		padding-top: 7px;
 	}
 	#menu{
 		position: absolute;
 		top: 50px;
 		left: 0;
 		width: 100%;
+		height: 100vh;
 		transform: translateX(-100%);
 		transition: all 0.3s;
 	}
 	#menu ul{
 		display: block;
+		height: 100%;
 	}
 	#menu ul li{
 		border-bottom: 2px solid rgba(255,255,255,0.3);
@@ -95,7 +98,7 @@ header label {
 }
 /*-------------------- Acerca de Mi ----------------*/
 #acerca_mi{
-	background: rgba(240,52,0,1.00);
+	background: rgba(31,157,249,1);
 	padding: 20px 0;
 	color: #fff;
 	box-shadow: 2px 2px 5px 1px rgba(14,17,41,0.8);
@@ -125,40 +128,41 @@ header label {
 	overflow: hidden;
 	box-shadow: 2px 2px 5px 1px rgba(14,17,41,0.8);
 	
-	transition: 1s;
-	border: 0px solid #fff;
-}
-.mi-imagen:hover{
-	border: 4px solid #fff;
 	transition: all 0.2s;
-}
-.mi-imagen img{
-	width: 100%;
-	background-size:cover;
-	min-width: 400px;
-	
-	transition: 0.8s;
 	filter: grayscale(0%);
 	-webkit-filter: grayscale(0%);
-	-o-filter: grayscale(0%);
+	border: 4px solid #fff;
 }
-
-.mi-imagen img:hover{
-	cursor: pointer;
-	animation: anim-min 0.4s;
-	-webkit-animation: anim-min 0.8s;
-	-o-animation: anim-min 0.8s;
-	
-	transition: 0.4s;
-	filter: grayscale(70%);
-	-webkit-filter: grayscale(70%);
-	-o-filter: grayscale(70%);
+.mi-imagen:hover{
+	transition: all 0.2s;
+	filter: grayscale(50%);
+	-webkit-filter: grayscale(50%);
+}
+#imag1{
+	width: 100%;
+	min-width: 350px;
+	height: 100%;
 }
 
 .texto-cont{
 	width: 40%;
-	margin: 10px 10px;
-	
+	margin: 15px 10px;
+	padding: 7px;
+	background: rgba(255,255,255,0.1);
+	box-shadow: 2px 2px 5px 1px rgba(14,17,41,0.3);
+	border-radius: 25px 0;
+	font-size: 14px;
+}
+.log-mi{
+	display: flex;
+	flex-wrap: wrap;
+	margin-top: 5px;
+	justify-content: center;
+}
+
+.log-mi h4{
+	font-size: 14px;
+	padding: 10px 15px;
 }
 @media (max-width:850px){
 	#acerca_mi{
@@ -330,6 +334,8 @@ hr{
 }
 .libreria_titulo{
 	display: flex;
+	transform: translateY(0%) translateX(0%);
+	transition: transform 0.2s;
 }
 .libreria_titulo img{
 	width: 30px;
@@ -350,10 +356,13 @@ hr{
 }
 .contenido_item{
 	display: none;
-	width: 100%;
+	width: 90%;
+}
+.libreria_item:hover{
+	background: rgba(101,13,120,0.80);
 }
 .libreria_item:hover .libreria_titulo{
-	transform: translateY(-600%) translateX(15%);
+	transform: translateY(-600%) translateX(0%);
 	transition: transform 0.2s;
 }
 .libreria_item:hover .contenido_item{
@@ -365,6 +374,7 @@ hr{
 }
 .cont_ot{
 	font-size: 11px;
+	width: 100%;
 	color: #eee;
 	display: flex;
 	justify-content: center;
@@ -386,6 +396,7 @@ hr{
 @media (max-width:850px){
 	#conocimientos{
 		width: 100%;
+		position: relative;
 	}
 	.libreria{
 		height: 900px;
@@ -399,16 +410,26 @@ hr{
 	}
 	.libreria_item:hover .titulo_item{
 		font-size: 18px;
-		transform: translateY(-350%) translateX(-25%);
+		transform: translateY(-350%) translateX(0%);
 		transition: transform 0.2s;
 	}
 	.libreria_item:hover .img-titulo{
 		display: none;
 	}
 	.libreria_item:hover .contenido_item{
-		display: inline;
+		display: inline-block;
 		padding-top: 10%;
 		position: absolute;
+		left: 0;
+		top: 0;
+	}
+	.contenido_item{
+		margin-top: 5px;
+	}
+	.contenido_item p{
+		padding: 0;
+		margin: 0;
+		width: 100%;
 	}
 	.cont_ot img{
 		width: 12%;
@@ -418,6 +439,11 @@ hr{
 		width: 90%;
 		height: 100%;
 		font-size: 9px;
+	}
+	.libreria_titulo{
+		width: 100%;
+		top:0;
+		left: 0;
 	}
 }
 
@@ -484,18 +510,32 @@ hr{
 	width: 100%;
 	height: 50%;
 	padding: 5px;
+	filter:brightness(100%);
+	transition: filter 0.2s;
+}
+.proy_item:hover img{
+	filter:brightness(50%);
+	transition: filter 0.2s;
 }
 .proy_item p{
-	padding: 5px;
+	padding: 5px 10px;
 	font-size: 12px;
+	background: rgba(31,157,249,0.2);
+	border-radius: 10px;
+	margin-top: 5px;
 }
 button{
 	width: 90%;
-	background: rgba(251,66,25,1);;
+	background: rgba(31,157,249,1);
+	border-color: rgba(31,157,249,1);
+	color:#fff;
 	padding: 5px 0;
 	margin-top: 10px;
 	cursor: pointer;
 	border-radius: 5px;
+}
+button:hover{
+	background: rgba(31,157,249,0.8)
 }
 /* --- contactame --- */
 #contactame{
@@ -523,7 +563,7 @@ button{
 .formulario {
 	width: 450px;
 	height: 100%;
-	background: rgba(255,255,255,0.1);
+	background: rgba(255,255,255,0.5);
 	margin: 25px;
 	justify-content: center;
 	padding: 20px 10px;
@@ -534,6 +574,7 @@ button{
 }
 .formulario label{
 	margin: 20px auto;
+	color: rgba(240,52,0,1.00);
 }
 #nombre, #email, #comentario{
 	width: 70%;
@@ -543,8 +584,16 @@ button{
 	width: 100%;
 	height: 30px;
 	margin-top: 10px;
-	background: #fff;
+	background: rgba(240,52,0,0.9);
+	border: 2px solid rgba(240,52,0,1.00);
+	border-radius: 5px;
+	box-shadow: 2px 2px 5px 1px rgba(14,17,41,0.5);
 	cursor: pointer;
+	color: #fff;
+	font-size: 17px;
+}
+#btn-enviar:hover{
+	background: rgba(240,52,0,0.6);
 }
 #mensajeF{
 	width: 90%;
@@ -574,11 +623,10 @@ button{
 	display: flex;
 	justify-content: center;
 }
-.iconoB{
+.redes_soc_log div{
 	width: 100px;
 	height: 80px;
-	background: green;
-	margin: 2px;
+	margin: 5px;
 }
 .derechos{
 	text-align: center;
@@ -592,6 +640,14 @@ button{
 	height: 80px;
 	border-radius: 50%;
 	border: 2px solid #fff;
+	filter: sepia(0%);
+	transition: all 0.2s;
+	box-shadow: 2px 2px 5px 1px rgba(14,17,41,0.5);
+}
+.derechos img:hover{
+	filter: sepia(60%);
+	transition: all 0.2s;
+	box-shadow: 2px 2px 5px 1px rgba(14,17,41,1);
 }
 
 @media (max-width:850px){
