--- a/css/slider.css
+++ b/css/slider.css
@@ -43,7 +43,7 @@
 	width: 80px;
 	height: 80px;
 	top: 5%;
-	left: 20%;
+	left: 30%;
 	animation: circulos 3.8s infinite alternate linear;
 
 }
@@ -91,6 +91,51 @@
 	padding-top: 15px;
 	animation: circulos 3.65s infinite alternate;
 }
+.icono-art{
+	position: relative;
+	background: rgba(255,255,255,0.3);
+	width: 300px;
+	height: 40%;
+	border-radius: 50px 0px 50px 0;
+	box-shadow: 2px 2px 5px 1px rgba(14,17,41,0.4);
+	margin: 5px;
+}
+.icono-art img{
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	width: 100%;
+	height: 100%;
+	transform: translateX(-50%) translateY(-50%);
+}
+.sub-titulo{
+	position: absolute;
+	bottom: 0%;
+	right: 0%;
+	background: rgba(255,255,255,0.3);
+	width: 50%;
+	height: 14%;
+	margin: 5px;
+	border-radius: 20px 0px 20px 0;
+	box-shadow: -2px -2px 5px 1px rgba(14,17,41,0.4);
+	padding: 10px 5px;
+	text-align: center;
+	font-size: 20px;
+	color: #fff;
+}
+.btn-portada{
+	width: 200px;
+	height: 20px;
+	background:rgba(31,157,249,1.00);
+	color: #fff;
+	border: rgba(31,157,249,0.7);
+	cursor: pointer;
+	border-radius: 4px;
+}
+.btn-portada:hover{
+	color: rgba(31,157,249,1);
+	background: #fff;
+}
 @keyframes imag{
 	from{
 		background-size: 1380px;
@@ -99,5 +144,10 @@
 	to{
 		background-size: 1920px;
 		background-position: right center;
+	}
+}
+@media (max-width:850px){
+	.sub-titulo{
+		width: 100%;
 	}
 }
