--- a/css/estilo.css
+++ b/css/estilo.css
@@ -8,6 +8,9 @@
 }
 body{
 	font-family: 'Play', sans-serif;
+	background: url(../imagenes/fondo.jpg);
+	background-repeat: no-repeat;
+	background-attachment: fixed;
 }
 header #container-header{
 	width: 100%;
@@ -23,9 +26,28 @@ header #container-header{
 
 h1 a{
 	font-size: 20px;
-	margin: 10px 0 0 10px;
+	margin: 0px 55px;
 	text-decoration: none;
 	color: #fff;
+	padding-top: 0;
+	cursor: pointer;
+}
+#logo-arturo{
+	width: 50px;
+	height: 50px;
+	position: absolute;
+	top: 0;
+	left: 2px;
+	transform: rotate(0deg);
+	transition: transform 0.7s;
+}
+h1:hover a{
+	color: rgba(155,188,209,1.00);
+	font-size: 18px;
+}
+h1:hover #logo-arturo{
+	transform: rotate(-12deg);
+	transition: transform 0.7s;
 }
 
 #btn-menu{
@@ -50,7 +72,7 @@ header label {
 #menu a{
 	text-decoration: none;
 	color: #fff;
-	padding: 15px 20px;
+	padding: 15px 10px;
 	display: block;
 
 }
@@ -98,7 +120,7 @@ header label {
 }
 /*-------------------- Acerca de Mi ----------------*/
 #acerca_mi{
-	background: rgba(31,157,249,1);
+	background: rgba(31,157,249,0.9);
 	padding: 20px 0;
 	color: #fff;
 	box-shadow: 2px 2px 5px 1px rgba(14,17,41,0.8);
@@ -123,7 +145,7 @@ header label {
 }
 .mi-imagen{
 	width: 50%;
-	height: 300px;
+	height: 490px;
 	margin: 15px;
 	overflow: hidden;
 	box-shadow: 2px 2px 5px 1px rgba(14,17,41,0.8);
@@ -132,6 +154,7 @@ header label {
 	filter: grayscale(0%);
 	-webkit-filter: grayscale(0%);
 	border: 4px solid #fff;
+	border-radius: 25px 0;
 }
 .mi-imagen:hover{
 	transition: all 0.2s;
@@ -147,22 +170,30 @@ header label {
 .texto-cont{
 	width: 40%;
 	margin: 15px 10px;
-	padding: 7px;
+	padding: 7px 10px;
 	background: rgba(255,255,255,0.1);
 	box-shadow: 2px 2px 5px 1px rgba(14,17,41,0.3);
 	border-radius: 25px 0;
-	font-size: 14px;
+	font-size: 16px;
+}
+.texto-cont h3{
+	padding: 10px 0;
 }
 .log-mi{
 	display: flex;
 	flex-wrap: wrap;
-	margin-top: 5px;
+	margin-top: 15px;
 	justify-content: center;
 }
 
 .log-mi h4{
-	font-size: 14px;
-	padding: 10px 15px;
+	font-size: 15px;
+	padding: 15px 15px;
+	cursor: pointer;
+}
+.log-mi h4:hover{
+	text-decoration: underline;
+	color: #010832;
 }
 @media (max-width:850px){
 	#acerca_mi{
@@ -227,20 +258,114 @@ header label {
 	transform: translateX(-10%) translateY(-50%);
 }
 
-.circulo{
+/*.circulo{
 	width: 100px;
 	height: 100px;
-	background: blue;
 	border-radius: 50%;
 	box-shadow: -30px -30px 0 0 rgba(0,0,0,0.15) inset,
 				-70px -40px 0 0 rgba(0,0,0,0.1) inset,
 				5px 5px 0 0 rgba(255,255,255,0.2) inset;
 	overflow: hidden;
-	/*background-size: cover;*/
+	border-style: 2px 1px #fff;
+	/*background-size: cover;
 	position: relative;
 	transform: translateX(-100%);
+}*/
+.circulo1, .circulo2, .circulo3, .circulo4, .circulo5{
+	width: 100px;
+	height: 100px;
+	padding: 20px;
+	background: rgba(255,255,255,0.7);
+	border-radius: 50%;
+	position: relative;
+	overflow: hidden;
+	transform: translateX(-100%);
+	box-shadow: 0px 0px 8px rgba(14,17,41,0.5);
 }
-
+.circulo1 h4, .circulo2 h4, .circulo3 h4, .circulo4 h4, .circulo5 h4{
+	color: #fff;
+	position: absolute;
+	top: 38%;
+	left: 30%;
+	font-size: 20px;
+	z-index: 20;
+}
+.circulo1:before, .circulo2:before, .circulo3:before, .circulo4:before, .circulo5:before{
+	content: "";
+	width: 80%;
+	height: 80%;
+	background: rgba(14,17,41,1);
+	position: absolute;
+	top: 10px;
+	left: 10px;
+	border-radius: 50%;
+	text-align: center;
+	font-size: 20px;
+	line-height: 90px;
+	z-index: 10;
+}
+.circulo1:after{
+	content: "";
+	width: 0;
+	height: 0;
+	border-left: 70px solid transparent;
+	border-right: 70px solid transparent;
+	border-bottom: 140px solid rgba(10,17,250,0.8);
+	
+	position: absolute;
+	top: -100px;
+	left: -50px;
+	transform: rotate(27deg);
+}
+.circulo2:after{
+	content: "";
+	width: 140px;
+	height: 0;
+	border-left: 70px solid transparent;
+	border-right: 70px solid transparent;
+	border-bottom: 140px solid rgba(10,17,250,0.8);
+	position: absolute;
+	top: -130px;
+	left: -180px;
+	transform: rotate(28deg);
+}
+.circulo3:after{
+	content: "";
+	width: 140px;
+	height: 0;
+	border-left: 70px solid transparent;
+	border-right: 70px solid transparent;
+	border-bottom: 140px solid rgba(10,17,250,0.8);
+	position: absolute;
+	top: -90px;
+	left: -160px;
+	transform: rotate(90deg);
+}
+.circulo4:after{
+	content: "";
+	width: 140px;
+	height: 0;
+	border-left: 70px solid transparent;
+	border-right: 70px solid transparent;
+	border-bottom: 140px solid rgba(10,17,250,0.8);
+	position: absolute;
+	top: -80px;
+	left: -160px;
+	transform: rotate(90deg);
+}
+.circulo5:after{
+	content: "";
+	width: 0;
+	height: 0;
+	border-left: 70px solid transparent;
+	border-right: 70px solid transparent;
+	border-bottom: 140px solid rgba(10,17,250,0.8);
+	
+	position: absolute;
+	top: -120px;
+	left: -50px;
+	transform: rotate(27deg);
+}
 .circulo h2{
 	font-size: 20px;
 	color: #fff;
@@ -373,7 +498,7 @@ hr{
 	transition: all 0.4s 0.4s;
 }
 .cont_ot{
-	font-size: 11px;
+	font-size: 12px;
 	width: 100%;
 	color: #eee;
 	display: flex;
@@ -438,7 +563,7 @@ hr{
 	.cont_ot p{
 		width: 90%;
 		height: 100%;
-		font-size: 9px;
+		font-size: 10px;
 	}
 	.libreria_titulo{
 		width: 100%;
@@ -465,7 +590,7 @@ hr{
 #portafolio{
 	width:100%;
 	height: 50%;
-	background: #fff;
+	background: rgba(225,225,225,0.9);
 	text-align: center;
 }
 #portafolio h1{
@@ -517,6 +642,9 @@ hr{
 	filter:brightness(50%);
 	transition: filter 0.2s;
 }
+.proy_item:hover h4{
+	color: rgba(155,188,209,1.00);
+}
 .proy_item p{
 	padding: 5px 10px;
 	font-size: 12px;
@@ -535,13 +663,13 @@ button{
 	border-radius: 5px;
 }
 button:hover{
-	background: rgba(31,157,249,0.8)
+	background: rgba(31,157,249,0.7)
 }
 /* --- contactame --- */
 #contactame{
 	width: 100%;
 	height: 50%;
-	background: rgba(240,52,0,1.00);
+	background: rgba(240,52,0,0.9);
 	color: #fff;
 	margin: 20px auto;
 	padding: 20px 0;
@@ -622,11 +750,22 @@ button:hover{
 .redes_soc_log{
 	display: flex;
 	justify-content: center;
+	width: 100%;
 }
-.redes_soc_log div{
+.iconos-red img{
 	width: 100px;
-	height: 80px;
-	margin: 5px;
+	height: 100px;
+	margin: 15px 5px;
+	border-radius: 50%;
+	border: 5px solid #fff;
+	box-shadow: 2px 2px 5px 1px rgba(14,17,41,0.7);
+	cursor: pointer;
+	filter: sepia(0%);
+	transition: filter 0.3s;
+}
+.iconos-red:hover img{
+	filter: sepia(50%);
+	transition: filter 0.3s;
 }
 .derechos{
 	text-align: center;
@@ -635,14 +774,21 @@ button:hover{
 	margin: auto;
 	padding-top: 20px;
 }
-.derechos img{
-	width: 80px;
-	height: 80px;
+.derechos .log-cont{
+	width: 100px;
+	height: 100px;
 	border-radius: 50%;
 	border: 2px solid #fff;
 	filter: sepia(0%);
 	transition: all 0.2s;
 	box-shadow: 2px 2px 5px 1px rgba(14,17,41,0.5);
+	overflow: hidden;
+	margin: 5px auto;
+}
+.log-cont img{
+	width: 120px;
+	height: 100px;
+	transform: translateX(-10px);
 }
 .derechos img:hover{
 	filter: sepia(60%);
