--- a/css/loader.css
+++ b/css/loader.css
@@ -17,7 +17,7 @@
 .container-loader:before{
 	content: "";
 	position: absolute;
-	top: 95%;
+	top: 100%;
 	left: 15%;
 	width: 100px;
 	height: 1px;
@@ -29,7 +29,7 @@
 .container-loader:after{
 	content: "";
 	position: absolute;
-	top: 95%;
+	top: 100%;
 	right: 0%;
 	width: 20px;
 	height: 1px;
@@ -41,7 +41,7 @@
 .container-loader p:after{
 	content: "";
 	position: absolute;
-	top: 95%;
+	top: 100%;
 	right: 15%;
 	width: 40px;
 	height: 1px;
@@ -54,6 +54,22 @@
 	font-size: 35px;
 	transition: transform 0.5;
 	animation: titulo 0.8s;
+}
+.container-loader img{
+	width: 100px;
+	height: 100px;
+	transform: translateX(50%) translateY(0%);
+	animation:  0.7s;
+}
+@keyframes logo1{
+	from{
+		transform: translateX(50%) translateY(-1000%);
+		transition: transform 0.5s;
+	}
+	to{
+		transform: translateX(50%) translateY(0%);
+		transition: transform 0.5s;
+	}
 }
 
 .adorno:before{
