--- a/css/estilo.css
+++ b/css/estilo.css
@@ -163,8 +163,8 @@ header label {
 }
 #imag1{
 	width: 100%;
-	min-width: 350px;
-	height: 100%;
+	min-width: 400px;
+	height: 600px;
 }
 
 .texto-cont{
@@ -258,19 +258,6 @@ header label {
 	transform: translateX(-10%) translateY(-50%);
 }
 
-/*.circulo{
-	width: 100px;
-	height: 100px;
-	border-radius: 50%;
-	box-shadow: -30px -30px 0 0 rgba(0,0,0,0.15) inset,
-				-70px -40px 0 0 rgba(0,0,0,0.1) inset,
-				5px 5px 0 0 rgba(255,255,255,0.2) inset;
-	overflow: hidden;
-	border-style: 2px 1px #fff;
-	/*background-size: cover;
-	position: relative;
-	transform: translateX(-100%);
-}*/
 .circulo1, .circulo2, .circulo3, .circulo4, .circulo5{
 	width: 100px;
 	height: 100px;
@@ -463,9 +450,8 @@ hr{
 	transition: transform 0.2s;
 }
 .libreria_titulo img{
-	width: 30px;
-	height: 30px;
-	border-radius: 50%;
+	width: 33px;
+	height: 33px;
 }
 .titulo_item{
 	margin: auto 4px;
@@ -596,6 +582,7 @@ hr{
 #portafolio h1{
 	padding: 10px 0 10px 0;
 	margin: 5px 0 10px 0;
+	color: rgba(14,17,41,1);
 	box-shadow: 2px 2px 5px 1px rgba(14,17,41,0.3);
 }
 .contenido{
@@ -608,11 +595,12 @@ hr{
 	flex-wrap: wrap;
 }
 .logos-h{
-	width: 100px;
-	height: 110px;
+	width: 200px;
+	height: 200px;
 	font-size: 80%;
 	padding-top: 5px;
 	margin: 10px;
+	color: rgba(14,17,41,1);
 }
 .logos-h img{
 	width: 60%;
@@ -813,4 +801,72 @@ footer{
 	height: 100px;
 	text-align: center;
 	padding-top: 40px;
+}
+
+/* --- gmail --*/
+#gmail{
+	display: none;
+	background: rgba(14,17,41,0.7);
+	width: 100%;
+	height: 100%;
+	position: fixed;
+	top: 0;
+	left: 0;
+	z-index: 950;
+}
+.gmail-cont{
+	width: 80%;
+	background: rgba(14,17,41,0.9);;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	margin: auto;
+	border-radius: 25px;
+	box-shadow: 2px 2px 5px 1px rgba(225,225,225,0.3);
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translateX(-50%) translateY(-50%);
+	border: 5px solid #fff;
+}
+#gmail img{
+	width: 250px;
+	height: 200px;
+	margin: 5% 10px 0 5%;
+	border-radius: 15px;
+	box-shadow: 2px 2px 5px 1px rgba(225,225,225,0.3);
+}
+.gmail-art{
+	width: 60%;
+	height: 200px;
+	margin: 7% auto 0 auto;
+	color: #fff;
+}
+.gmail-art label{
+	padding-left: 10%;
+}
+.gmail-art input{
+	float: right;
+	padding: 0 15px;
+	width: 65%;
+	
+}
+#cerrar-gmail{
+	color: #fff;
+	float: right;
+	font-size: 50px;
+	padding-right: 15px;
+	cursor: pointer;
+}
+@media (max-width:850px){
+	.gmail-art{
+		text-align: center;
+	}
+	.gmail-art input{
+		width: 100%;
+		padding: 0 auto;
+	}
+	.gmail-art label{
+		padding: 0;
+	}
 }
