--- a/css/estilo.css
+++ b/css/estilo.css
@@ -131,7 +131,7 @@ header label {
 	text-align: center;
 	padding: 10px 0 10px 0;
 	margin: 5px 0 10px 0;
-	background: rgba(255,255,255,0.1);
+	background: rgba(14,17,41,0.5);
 	box-shadow: 2px 2px 5px 1px rgba(14,17,41,0.8);
 }
 #info-1{
@@ -171,7 +171,7 @@ header label {
 	width: 40%;
 	margin: 15px 10px;
 	padding: 7px 10px;
-	background: rgba(255,255,255,0.1);
+	background: rgba(14,17,41,0.5);
 	box-shadow: 2px 2px 5px 1px rgba(14,17,41,0.3);
 	border-radius: 25px 0;
 	font-size: 16px;
@@ -241,7 +241,7 @@ header label {
 .titulo_habilidades{
 	width: 95%;
 	height: 10%;
-	background: rgba(76,141,211,0.9);
+	background: rgba(14,17,41,0.9);
 	margin: auto;
 	padding: 20px;
 	border-radius: 10px;
@@ -268,6 +268,18 @@ header label {
 	overflow: hidden;
 	transform: translateX(-100%);
 	box-shadow: 0px 0px 8px rgba(14,17,41,0.5);
+	transition: transform 0.2s;
+	cursor: pointer;
+}
+
+.circulo1:hover h4, .circulo2:hover h4, .circulo3:hover h4, .circulo4:hover h4, .circulo5:hover h4{
+	background: rgba(14,17,41,1);
+	width: 90px;
+	height: 90px;
+	border-radius: 50%;
+	transform: translateX(-28%) translateY(-37%);
+	transition: transform 0.2s;
+	line-height: 90px;
 }
 .circulo1 h4, .circulo2 h4, .circulo3 h4, .circulo4 h4, .circulo5 h4{
 	color: #fff;
@@ -457,7 +469,7 @@ hr{
 	margin: auto 4px;
 }
 .libreria_item:nth-child(1){
-	background: rgba(76,141,211,0.9);
+	background: rgba(76,141,211,0.8);
 }
 .libreria_item:nth-child(2){
 	background: rgba(251,66,25,0.7);
@@ -470,7 +482,7 @@ hr{
 	width: 90%;
 }
 .libreria_item:hover{
-	background: rgba(101,13,120,0.80);
+	background: rgba(14,17,41,0.8);
 }
 .libreria_item:hover .libreria_titulo{
 	transform: translateY(-600%) translateX(0%);
@@ -484,7 +496,7 @@ hr{
 	transition: all 0.4s 0.4s;
 }
 .cont_ot{
-	font-size: 12px;
+	font-size: 17px;
 	width: 100%;
 	color: #eee;
 	display: flex;
@@ -502,6 +514,7 @@ hr{
 .cont_ot p{
 	width: 70%;
 	height: 100%;
+	padding-top: 3%;
 }
 
 @media (max-width:850px){
@@ -521,7 +534,7 @@ hr{
 	}
 	.libreria_item:hover .titulo_item{
 		font-size: 18px;
-		transform: translateY(-350%) translateX(0%);
+		transform: translateY(-250%) translateX(0%);
 		transition: transform 0.2s;
 	}
 	.libreria_item:hover .img-titulo{
@@ -535,12 +548,8 @@ hr{
 		top: 0;
 	}
 	.contenido_item{
-		margin-top: 5px;
-	}
-	.contenido_item p{
-		padding: 0;
-		margin: 0;
-		width: 100%;
+		margin: 7% 5%;
+		padding: 20% 8%;
 	}
 	.cont_ot img{
 		width: 12%;
@@ -549,7 +558,8 @@ hr{
 	.cont_ot p{
 		width: 90%;
 		height: 100%;
-		font-size: 10px;
+		padding-top: 3%;
+		font-size: 14px;
 	}
 	.libreria_titulo{
 		width: 100%;
@@ -576,14 +586,16 @@ hr{
 #portafolio{
 	width:100%;
 	height: 50%;
-	background: rgba(225,225,225,0.9);
+	background: rgba(225,225,225,0.5);
 	text-align: center;
+	padding-top: 20px;
 }
 #portafolio h1{
 	padding: 10px 0 10px 0;
 	margin: 5px 0 10px 0;
-	color: rgba(14,17,41,1);
+	color: #fff;
 	box-shadow: 2px 2px 5px 1px rgba(14,17,41,0.3);
+	background: rgba(14,17,41,0.8);
 }
 .contenido{
 	width: 100%;
@@ -623,6 +635,7 @@ hr{
 	width: 100%;
 	height: 50%;
 	padding: 5px;
+	border: 2px solid #fff;
 	filter:brightness(100%);
 	transition: filter 0.2s;
 }
@@ -657,7 +670,7 @@ button:hover{
 #contactame{
 	width: 100%;
 	height: 50%;
-	background: rgba(240,52,0,0.9);
+	background: rgba(240,52,0,0.8);
 	color: #fff;
 	margin: 20px auto;
 	padding: 20px 0;
@@ -802,6 +815,19 @@ footer{
 	text-align: center;
 	padding-top: 40px;
 }
+.cv{
+	text-decoration: none;
+	font-size: 25px;
+	color: #5AAFFF;
+	background: rgba(225,225,225,0.2);
+	padding: 2px 15px;
+	border-radius: 5px;
+}
+.cv:hover{
+	color: rgba(14,17,41,0.7);
+	text-decoration: underline;
+	background: rgba(225,225,225,0.5);
+}
 
 /* --- gmail --*/
 #gmail{
@@ -851,7 +877,7 @@ footer{
 	width: 65%;
 	
 }
-#cerrar-gmail{
+.cerrar{
 	color: #fff;
 	float: right;
 	font-size: 50px;
@@ -869,4 +895,40 @@ footer{
 	.gmail-art label{
 		padding: 0;
 	}
+}
+
+/*--- flotantes ---*/
+#flo_html, #flo_css, #flo_frond, #flo_js, #flo_js_escencial, #flo_js_dombom, #flo_jquery, #flo_jq_mobile, #flo_jq_ui{
+	display: none;
+	background: rgba(14,17,41,0.7);
+	width: 100%;
+	height: 100%;
+	position: fixed;
+	top: 0;
+	left: 0;
+	z-index: 950;
+}
+.flo_cont{
+	width: 80%;
+	background: rgba(14,17,41,1);
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	margin: auto;
+	border-radius: 25px;
+	box-shadow: 2px 2px 5px 1px rgba(225,225,225,0.3);
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translateX(-50%) translateY(-50%);
+	border: 1px solid rgba(225,225,225,0.8);
+	color: rgba(225,225,225,0.8);
+}
+.flo_cont img{
+	width: 100px;
+	height: 100px;
+	margin: 5% 10px 5% 5%;
+}.flo_cont p{
+	width: 400px;
+	padding: 3% 20px 5% 20px;
 }
