--- a/css/slider.css
+++ b/css/slider.css
@@ -16,7 +16,7 @@
 	position: relative;
 }
 .circ_ad1, .circ_ad2, .circ_ad3, .circ_ad4, .circ_ad5, .circ_ad6{
-	background: rgba(255,255,255,0.8);
+	background: rgba(255,255,255,0.5);
 	position: absolute;
 	border-radius: 50%;
 	box-shadow: 0px 0px 12px 0px #fff;
@@ -114,27 +114,29 @@
 	right: 0%;
 	background: rgba(255,255,255,0.3);
 	width: 50%;
-	height: 14%;
+	height: 25%;
 	margin: 5px;
 	border-radius: 20px 0px 20px 0;
 	box-shadow: -2px -2px 5px 1px rgba(14,17,41,0.4);
-	padding: 10px 5px;
+	padding: 5px;
 	text-align: center;
 	font-size: 20px;
-	color: #fff;
+	color: rgba(14,17,41,1);
 }
 .btn-portada{
-	width: 200px;
-	height: 20px;
-	background:rgba(31,157,249,1.00);
+	width: 250px;
+	height: 40px;
+	background:rgba(240,52,0,0.9);
 	color: #fff;
-	border: rgba(31,157,249,0.7);
+	border: 2px solid rgba(31,157,249,0.7);
 	cursor: pointer;
 	border-radius: 4px;
+	font-size: 20px;
+	margin-top: 10px;
 }
 .btn-portada:hover{
-	color: rgba(31,157,249,1);
-	background: #fff;
+	color: rgba(225,225,225,0.9);
+	background: rgba(14,17,41,0.8);
 }
 @keyframes imag{
 	from{
